--- a/roblox_limited_items/Base.lproj/Main.storyboard
+++ b/roblox_limited_items/Base.lproj/Main.storyboard
@@ -62,9 +62,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kcs-69-1Zx"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Latest Collectables" id="GDo-li-DVe">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="CvE-tV-9TW"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Latest Collectables" id="GDo-li-DVe"/>
                     <connections>
                         <outlet property="tableView" destination="FS6-Kn-gxR" id="JuJ-Cv-G5X"/>
                         <segue destination="q8Y-4Y-t2X" kind="show" identifier="ShowItemDetail" id="6VS-1z-c7q"/>
@@ -81,10 +79,87 @@
                     <view key="view" contentMode="scaleToFill" id="H1J-vf-qXr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hjC-HE-bIv">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89z-eD-azO" userLabel="Label1">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="86"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P5I-K3-9Da" userLabel="Label2">
+                                        <rect key="frame" x="0.0" y="86" width="375" height="86.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dma-i3-tu6" userLabel="Label3">
+                                        <rect key="frame" x="0.0" y="172.5" width="375" height="86"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WYS-i3-Evs" userLabel="Label4">
+                                        <rect key="frame" x="0.0" y="258.5" width="375" height="86"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rw5-kc-Wbp" userLabel="Label5">
+                                        <rect key="frame" x="0.0" y="344.5" width="375" height="86"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOG-M8-UCg" userLabel="Label6">
+                                        <rect key="frame" x="0.0" y="430.5" width="375" height="86.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pxt-hM-d9b" userLabel="Label7">
+                                        <rect key="frame" x="0.0" y="517" width="375" height="86"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Pxt-hM-d9b" firstAttribute="height" secondItem="qOG-M8-UCg" secondAttribute="height" id="43L-0b-ndQ"/>
+                                    <constraint firstItem="WYS-i3-Evs" firstAttribute="height" secondItem="Dma-i3-tu6" secondAttribute="height" id="6x9-97-2c2"/>
+                                    <constraint firstItem="WYS-i3-Evs" firstAttribute="width" secondItem="Dma-i3-tu6" secondAttribute="width" id="HBM-f1-j3m"/>
+                                    <constraint firstItem="89z-eD-azO" firstAttribute="leading" secondItem="hjC-HE-bIv" secondAttribute="leading" id="Jb9-J3-xom"/>
+                                    <constraint firstItem="Dma-i3-tu6" firstAttribute="height" secondItem="P5I-K3-9Da" secondAttribute="height" id="O1N-5U-U4E"/>
+                                    <constraint firstAttribute="trailing" secondItem="89z-eD-azO" secondAttribute="trailing" id="YOi-ji-Th1"/>
+                                    <constraint firstItem="Rw5-kc-Wbp" firstAttribute="height" secondItem="WYS-i3-Evs" secondAttribute="height" id="cnA-63-qDW"/>
+                                    <constraint firstItem="qOG-M8-UCg" firstAttribute="height" secondItem="Rw5-kc-Wbp" secondAttribute="height" id="dgr-jt-YL9"/>
+                                    <constraint firstItem="P5I-K3-9Da" firstAttribute="leading" secondItem="hjC-HE-bIv" secondAttribute="leading" id="ffA-tz-krC"/>
+                                    <constraint firstAttribute="trailing" secondItem="P5I-K3-9Da" secondAttribute="trailing" id="hgn-mg-cSV"/>
+                                    <constraint firstItem="P5I-K3-9Da" firstAttribute="height" secondItem="89z-eD-azO" secondAttribute="height" id="tlZ-MX-rTU"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hjC-HE-bIv" firstAttribute="leading" secondItem="o9R-Mv-dUx" secondAttribute="leading" id="8yt-au-zST"/>
+                            <constraint firstItem="o9R-Mv-dUx" firstAttribute="trailing" secondItem="hjC-HE-bIv" secondAttribute="trailing" id="IDJ-e9-y34"/>
+                            <constraint firstItem="hjC-HE-bIv" firstAttribute="top" secondItem="o9R-Mv-dUx" secondAttribute="top" id="Jci-lK-BYH"/>
+                            <constraint firstItem="o9R-Mv-dUx" firstAttribute="bottom" secondItem="hjC-HE-bIv" secondAttribute="bottom" id="bJo-Yw-gmt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="o9R-Mv-dUx"/>
                     </view>
                     <navigationItem key="navigationItem" title="Item Detail" id="OIV-Cy-N2R"/>
+                    <connections>
+                        <outlet property="Label1" destination="89z-eD-azO" id="3DN-FG-t1A"/>
+                        <outlet property="Label2" destination="P5I-K3-9Da" id="sKC-Oe-SfP"/>
+                        <outlet property="Label3" destination="Dma-i3-tu6" id="BOC-7k-Ivs"/>
+                        <outlet property="Label4" destination="WYS-i3-Evs" id="ohA-Bg-640"/>
+                        <outlet property="Label5" destination="Rw5-kc-Wbp" id="6Vl-Yg-OHd"/>
+                        <outlet property="Label6" destination="qOG-M8-UCg" id="5xV-ep-aNu"/>
+                        <outlet property="Label8" destination="Pxt-hM-d9b" id="UY0-vc-4VJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gZE-n1-17f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
